--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,3 +1,27 @@
+.aut-nav__svg--tel, .aut-nav__svg {
+  display: block;
+  padding: 0;
+  border: 0;
+}
+
+.fotter-links__svg, .fotter-links__list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.fotter-links__link, .navigation__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 body {
   background-color: #ffffff;
   color: #757575;
@@ -68,18 +92,6 @@ ul {
   border-bottom: 1px solid #ececec;
 }
 
-.navigation__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
 .site-nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -109,12 +121,13 @@ ul {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.site-nav__link:hover,
-.site-nav__link:focus {
+.site-nav__link:hover, .site-nav__link:focus {
   color: #2196f3;
 }
 
+.site-nav__link--current {
+  color: #2196f3;
+}
 .site-nav__link--current::after {
   display: inline-block;
   content: "";
@@ -129,13 +142,8 @@ ul {
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .site-nav__link--current:hover::after {
   opacity: 1;
-}
-
-.site-nav__link--current {
-  color: #2196f3;
 }
 
 .auth-nav {
@@ -168,7 +176,7 @@ ul {
           align-items: center;
   padding-top: 39px;
   padding-bottom: 40px;
-  color: var(--primary-text-color);
+  color: #757575;
   letter-spacing: 0.02em;
   font-weight: 500;
   font-size: 14px;
@@ -176,34 +184,24 @@ ul {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.aut-nav__link:hover,
-.aut-nav__link:focus {
+.aut-nav__link:hover, .aut-nav__link:focus {
   color: #2196f3;
 }
 
 .aut-nav__svg {
-  display: block;
-  padding: 0;
-  border: 0;
   width: 17px;
   height: 18px;
   fill: #afb1b8;
   margin-right: 10px;
 }
+.aut-nav__link:hover .aut-nav__svg, .aut-nav__link:focus .aut-nav__svg {
+  fill: #2196f3;
+}
 
 .aut-nav__svg--tel {
-  display: block;
-  padding: 0;
-  border: 0;
   width: 20px;
   height: 18px;
   fill: #afb1b8;
-}
-
-.aut-nav__link:hover .aut-nav__svg,
-.aut-nav__link:focus .aut-nav__svg {
-  fill: #2196f3;
 }
 
 .button-list {
@@ -239,9 +237,7 @@ ul {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.button-list__button:hover,
-.button-list__button:focus {
+.button-list__button:hover, .button-list__button:focus {
   color: #ffffff;
   background-color: #2196f3;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -268,17 +264,13 @@ ul {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.portfolio-card__item:hover,
-.portfolio-card__item:focus {
+.portfolio-card__item:hover, .portfolio-card__item:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-
 .portfolio-card__item:nth-last-child(-n+3) {
   margin-bottom: 0;
 }
-
 .portfolio-card__item:nth-child(3n) {
   margin-right: 0;
 }
@@ -299,36 +291,31 @@ ul {
   margin: 0;
   padding: 63px 24px;
   color: #ffffff;
-  /* opacity: 0; */
-  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
+  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transform: translateY(101%);
+          transform: translateY(101%);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  -webkit-transform: translateY(101%);
-          transform: translateY(101%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-card__link:focus .portfolio-card__text, .portfolio-card__link:hover .portfolio-card__text {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 
 .card-content {
   border: 1px solid #ececec;
   background-color: #ffffff;
   padding: 20px 24px;
-}
-
-.portfolio-card__link:focus .portfolio-card__text,
-.portfolio-card__link:hover .portfolio-card__text {
-  opacity: 1;
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
 }
 
 .card-content__title {
@@ -419,9 +406,6 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 0;
-  padding: 0;
-  list-style: none;
   margin-top: 20px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -429,15 +413,6 @@ ul {
 }
 
 .fotter-links__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -445,15 +420,11 @@ ul {
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.fotter-links__link:hover,
-.fotter-links__link:focus {
+.fotter-links__link:hover, .fotter-links__link:focus {
   background-color: #2196f3;
 }
 
 .fotter-links__svg {
-  padding: 0;
-  border: 0;
   fill: #ffffff;
 }
 
@@ -480,14 +451,13 @@ ul {
   border-color: rgba(255, 255, 255, 0.3);
 }
 
-.fotter-form__input:focus + .fotter-form__label {
-  color: #ffffff;
-}
-
 .fotter-form__label {
   position: absolute;
   bottom: 15px;
   left: 16px;
+}
+.fotter-form__input:focus .fotter-form__label {
+  color: #ffffff;
 }
 
 .fotter-form__button {
@@ -513,7 +483,6 @@ ul {
   letter-spacing: 0.06em;
   cursor: pointer;
 }
-
 .fotter-form__button::after {
   position: absolute;
   right: 10px;
