--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,38 @@
+.checkbox__input {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.aut-nav__svg--tel, .aut-nav__svg {
+  display: block;
+  padding: 0;
+  border: 0;
+}
+
+.fotter-links__svg, .fotter-links__list, .clients__list, .socials-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.fotter-links__link, .clients__link, .socials-list__link, .navigation__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 body {
   background-color: #ffffff;
   color: #757575;
@@ -68,18 +103,6 @@ ul {
   border-bottom: 1px solid #ececec;
 }
 
-.navigation__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
 .site-nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -109,12 +132,13 @@ ul {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.site-nav__link:hover,
-.site-nav__link:focus {
+.site-nav__link:hover, .site-nav__link:focus {
   color: #2196f3;
 }
 
+.site-nav__link--current {
+  color: #2196f3;
+}
 .site-nav__link--current::after {
   display: inline-block;
   content: "";
@@ -129,13 +153,8 @@ ul {
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .site-nav__link--current:hover::after {
   opacity: 1;
-}
-
-.site-nav__link--current {
-  color: #2196f3;
 }
 
 .auth-nav {
@@ -168,7 +187,7 @@ ul {
           align-items: center;
   padding-top: 39px;
   padding-bottom: 40px;
-  color: var(--primary-text-color);
+  color: #757575;
   letter-spacing: 0.02em;
   font-weight: 500;
   font-size: 14px;
@@ -176,34 +195,24 @@ ul {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.aut-nav__link:hover,
-.aut-nav__link:focus {
+.aut-nav__link:hover, .aut-nav__link:focus {
   color: #2196f3;
 }
 
 .aut-nav__svg {
-  display: block;
-  padding: 0;
-  border: 0;
   width: 17px;
   height: 18px;
   fill: #afb1b8;
   margin-right: 10px;
 }
+.aut-nav__link:hover .aut-nav__svg, .aut-nav__link:focus .aut-nav__svg {
+  fill: #2196f3;
+}
 
 .aut-nav__svg--tel {
-  display: block;
-  padding: 0;
-  border: 0;
   width: 20px;
   height: 18px;
   fill: #afb1b8;
-}
-
-.aut-nav__link:hover .aut-nav__svg,
-.aut-nav__link:focus .aut-nav__svg {
-  fill: #2196f3;
 }
 
 .hero {
@@ -335,7 +344,6 @@ ul {
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .modal__form-field input:focus {
   border-color: #188ce8;
 }
@@ -352,7 +360,6 @@ ul {
   bottom: 11px;
   left: 12px;
 }
-
 .modal__form-field:focus-within > .modal__form-svg {
   fill: #2196f3;
   border-color: #2196f3;
@@ -377,17 +384,6 @@ textarea {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
-}
-
-.checkbox__input {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  overflow: hidden;
 }
 
 .checkbox__input:checked + .checkbox__svg {
@@ -420,7 +416,6 @@ textarea {
   margin-top: 4px;
   cursor: pointer;
 }
-
 .checkbox__text:focus .checkbox__svg {
   color: #2196f3;
 }
@@ -512,12 +507,9 @@ textarea {
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.button-close__svg:hover,
-.button-close__svg:focus {
+.button-close__svg:hover, .button-close__svg:focus {
   fill: #2196f3;
 }
-
 .button-close:focus .button-close__svg {
   fill: #2196f3;
   border-color: #2196f3;
@@ -544,11 +536,9 @@ textarea {
   width: 270px;
   margin-right: 30px;
 }
-
 .benefits__item:nth-child(4n) {
   margin-right: 0;
 }
-
 .benefits__item::before {
   display: block;
   content: "";
@@ -561,11 +551,11 @@ textarea {
 }
 
 .benefits__item:nth-child(1)::before {
-  background-image: url(../images/Icon.svg/antenna\ 1.svg);
+  background-image: url(../images/Icon.svg/antenna.svg);
 }
 
 .benefits__item:nth-child(2)::before {
-  background-image: url(../images/Icon.svg/clock\ 1.svg);
+  background-image: url(../images/Icon.svg/clock.svg);
 }
 
 .benefits__item:nth-child(3)::before {
@@ -573,7 +563,7 @@ textarea {
 }
 
 .benefits__item:nth-child(4)::before {
-  background-image: url(../images/Icon.svg/astronaut\ 1.svg);
+  background-image: url(../images/Icon.svg/astronaut.svg);
 }
 
 .benefits__title {
@@ -609,11 +599,10 @@ textarea {
   overflow: hidden;
 }
 
-.work__list .work__thumb {
+.work__thumb {
   position: relative;
 }
-
-.work__list .work__thumb::before {
+.work__thumb::before {
   display: block;
   position: absolute;
   content: "";
@@ -627,23 +616,10 @@ textarea {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.work__thumb:hover .text-desctop {
-  opacity: 1;
-  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.work__thumb:hover::before {
-  opacity: 1;
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-}
-
 .work__item {
   margin-right: 30px;
   overflow: hidden;
 }
-
 .work__item:nth-child(3n) {
   margin-right: 0;
 }
@@ -722,29 +698,20 @@ textarea {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 0;
-  padding: 0;
-  list-style: none;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
 
 .socials-list__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   width: 44px;
   height: 44px;
   border-radius: 50%;
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.socials-list__link:hover, .socials-list__link:focus {
+  background-color: #2196f3;
 }
 
 .socials-list__icon {
@@ -754,14 +721,7 @@ textarea {
   height: 20px;
   fill: #afb1b8;
 }
-
-.socials-list__link:hover,
-.socials-list__link:focus {
-  background-color: #2196f3;
-}
-
-.socials-list__link:hover .socials-list__icon,
-.socials-list__link:focus .socials-list__icon {
+.socials-list__link:hover .socials-list__icon, .socials-list__link:focus .socials-list__icon {
   fill: #ffffff;
 }
 
@@ -769,8 +729,6 @@ textarea {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 0;
-  padding: 0;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -782,17 +740,8 @@ textarea {
 }
 
 .clients__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   width: 100%;
   height: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   fill: #afb1b8;
   border-color: #757575;
   border: 1px solid #afb1b8;
@@ -800,9 +749,7 @@ textarea {
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.clients__link:hover,
-.clients__link:focus {
+.clients__link:hover, .clients__link:focus {
   fill: #2196f3;
   border-color: #2196f3;
 }
@@ -882,9 +829,6 @@ textarea {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 0;
-  padding: 0;
-  list-style: none;
   margin-top: 20px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -892,15 +836,6 @@ textarea {
 }
 
 .fotter-links__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -908,15 +843,11 @@ textarea {
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.fotter-links__link:hover,
-.fotter-links__link:focus {
+.fotter-links__link:hover, .fotter-links__link:focus {
   background-color: #2196f3;
 }
 
 .fotter-links__svg {
-  padding: 0;
-  border: 0;
   fill: #ffffff;
 }
 
@@ -943,14 +874,13 @@ textarea {
   border-color: rgba(255, 255, 255, 0.3);
 }
 
-.fotter-form__input:focus + .fotter-form__label {
-  color: #ffffff;
-}
-
 .fotter-form__label {
   position: absolute;
   bottom: 15px;
   left: 16px;
+}
+.fotter-form__input:focus .fotter-form__label {
+  color: #ffffff;
 }
 
 .fotter-form__button {
@@ -976,7 +906,6 @@ textarea {
   letter-spacing: 0.06em;
   cursor: pointer;
 }
-
 .fotter-form__button::after {
   position: absolute;
   right: 10px;
